vlib/v/parser/tests/interop_js_func_body_err.out
vlib/v/parser/tests/interop_js_func_body_err.vv:1:43: error: interop functions cannot have a body
    1 | fn JS.state_is_ready_on_leave(retval int) {}
      |                                           ^
