vlib/v/parser/tests/interop_js_func_body_err.vv
fn JS.state_is_ready_on_leave(retval int) {}
